--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^10.2.1",
+    "login-with-twitter": "^1.2.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-scripts": "4.0.1",
+    "react-twitter-login": "^1.3.0",
     "tailwindcss": "^2.0.2",
     "web-vitals": "^0.2.4"
   },
