--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^10.2.1",
+    "axios": "^0.21.1",
     "login-with-twitter": "^1.2.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
