--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-twitter-login": "^1.3.0",
+    "redux": "^4.0.5",
     "tailwindcss": "^2.0.2",
     "web-vitals": "^0.2.4"
   },
